manifests/istio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hellogrpc
  name: hellogrpc
  namespace: hellogrpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hellogrpc
  template:
    metadata:
      labels:
        app: hellogrpc
    spec:
      containers:
      - image: gcr.io/jkwng-cicd-274417/helloworld-grpc:latest
        imagePullPolicy: Always
        name: hellogrpc
        ports:
        - containerPort: 50051
          protocol: TCP
          name: grpc
        volumeMounts:
        - name: certs
          mountPath: "/certs"
          readOnly: true
      volumes:
      - name: certs
        secret:
          secretName: hellogrpc-tls
