manifests/istio/hellogrpc-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hellogrpc
  name: hellogrpc
  namespace: hellogrpc
spec:
  ports:
  - port:  80
    protocol: TCP
    targetPort: 50051
    name: grpc
  selector:
    app: hellogrpc
