manifests/istio/hellogrpc-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: hellogrpc-gateway
  namespace: hellogrpc
spec:
  selector:
    # target the default gateway
    app: istio-ingressgateway
  servers:
  # because we want to terminate TLS at the edge, only serve port 80
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - '*'
    tls:
      mode: SIMPLE
      credentialName: hellogrpc-tls
#      minProtocolVersion: TLSV1_2
#      maxProtocolVersion: TLSV1_3
#      cipherSuites:
#      - ECDHE-RSA-AES128-GCM-SHA256
